fix spacing, add fonts

--- a/style.css
+++ b/style.css
@@ -1,3 +1,31 @@
+@font-face {
+  font-family: "RedditSansCondensed";
+  src: url("fonts/RedditSansCondensed-ExtraBold.ttf") format("truetype");
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "RedditSansCondensed";
+  src: url("fonts/RedditSansCondensed-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "RedditSansCondensed";
+  src: url("fonts/RedditSansCondensed-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "RedditSansCondensed";
+  src: url("fonts/RedditSansCondensed-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -5,7 +33,7 @@
 }
 
 body {
-  font-family: "Arial", sans-serif;
+  font-family: "RedditSansCondensed", sans-serif;
   background-color: #fdfdfd;
   color: #333;
 }
@@ -15,6 +43,8 @@ header {
   height: 695px;
   width: 100%;
   background-size: cover;
+  border-bottom-right-radius: 40px;
+  border-bottom-left-radius: 40px;
 }
 
 .header__container {
@@ -162,7 +192,7 @@ main {
   flex-direction: row;
   justify-content: space-between;
   align-items: end;
-  margin-top: 48px;
+  margin-top: 60px;
 }
 
 .section-header h2 {
@@ -199,7 +229,7 @@ main {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(0, 280px));
   gap: 20px;
-  margin-top: 24px;
+  margin-top: 30px;
 }
 
 .card {
@@ -270,7 +300,7 @@ main {
   background-image: url("./images/banner.png");
   height: 378px;
   width: 100%;
-  margin-top: 48px;
+  margin-top: 60px;
   display: flex;
   align-items: center;
   justify-content: end;
@@ -330,8 +360,11 @@ main {
   line-height: 20px;
 }
 
+.partners {
+  padding-top: 40px;
+}
+
 .partners .section-header {
-  margin-top: 60px;
   align-items: center;
 }
 
@@ -356,8 +389,8 @@ main {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(0, 151px));
   gap: 20px;
-  margin-top: 16px;
   height: 112px;
+  margin-top: 15px;
 }
 
 .partners-card {
@@ -370,7 +403,7 @@ main {
   background-image: url("./images/banner1.png");
   height: 378px;
   width: 100%;
-  margin-top: 24px;
+  margin-top: 40px;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -420,7 +453,7 @@ main {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(0, 380px));
   gap: 20px;
-  margin-top: 24px;
+  margin-top: 30px;
 }
 
 .knowledge {
@@ -660,7 +693,7 @@ footer {
   }
 
   .section-header {
-    margin-top: 32px;
+    margin-top: 40px;
   }
 
   .section-header button {
@@ -680,7 +713,7 @@ footer {
   .pet-gallery {
     grid-template-columns: repeat(auto-fit, minmax(0, 185px));
     gap: 12px;
-    margin-top: 12px;
+    margin-top: 20px;
   }
 
   .card img {
